<?xml version="1.0" encoding="utf-8"?><FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:descendantFocusability="blocksDescendants" >        <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginBottom="2dp"        android:layout_marginTop="2dp"        android:background="@drawable/card_background"        android:elevation="2dp"        android:orientation="vertical" >                <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:padding="16dp"        android:orientation="vertical" >                <RelativeLayout			android:layout_width="fill_parent"            android:layout_height="wrap_content" >                        <ImageView                android:id="@+id/profile_image"                android:layout_width="wrap_content"                android:layout_height="35dp"                android:adjustViewBounds="true"                android:scaleType="centerInside"                android:contentDescription="@string/profile_image"                android:src="@drawable/ic_launcher" />                        <LinearLayout                android:layout_width="fill_parent"                android:layout_height="wrap_content"                android:layout_centerVertical="true"                android:paddingLeft="5dp"                android:paddingStart="5dp"                android:layout_toRightOf="@+id/profile_image"                android:layout_toEndOf="@+id/profile_image"                android:layout_toLeftOf="@+id/like_container"                android:layout_toStartOf="@+id/like_container"                android:gravity="center_vertical"                android:orientation="vertical" >                                <TextView                    android:id="@+id/name"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:hint="@string/name"                    android:textStyle="bold" />                                <TextView                    android:id="@+id/date"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:hint="@string/username"                    android:textSize="12.0sp"                    android:textStyle="italic" />            </LinearLayout>                        <LinearLayout                android:id="@+id/like_container"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:paddingLeft="5dp"                android:layout_alignParentRight="true"                android:layout_alignParentEnd="true"                android:orientation="horizontal" >                 <ImageView                	android:layout_width="wrap_content"                	android:layout_height="35dp"                	android:adjustViewBounds="true"                	android:scaleType="centerInside"                	android:layout_gravity="center_vertical"               	 	android:contentDescription="@string/profile_image"                	android:src="@drawable/ic_action_thumbs_up" />                                               <TextView                    android:id="@+id/like_count"                    android:paddingLeft="5dp"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_gravity="center_vertical"                    android:textColor="@color/dim_gray"                    android:textSize="16dp"                    android:text="" />            </LinearLayout>                    </RelativeLayout>                <LinearLayout			android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:orientation="vertical" >                        <TextView                android:id="@+id/message"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_marginTop="10.0dip"                android:hint="@string/message"                android:textSize="14sp"                android:autoLink="web"                android:textDirection="locale"                android:textAppearance="?android:textAppearanceSmall"                android:textColorLink="@color/twitter" />                    </LinearLayout>                </LinearLayout>                <ImageView            android:id="@+id/photo"            android:layout_width="fill_parent"            android:adjustViewBounds="true"            android:layout_height="wrap_content" />                <RelativeLayout            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:orientation="horizontal" >                	<Button        	    style="?android:attr/borderlessButtonStyle"        	    android:id="@+id/share"        	    android:layout_width="wrap_content"        	    android:layout_height="wrap_content"        	    android:text="@string/share"        	    android:textColor="@color/myAccentColor" />        	        	<Button        	    android:id="@+id/open"        	    style="?android:attr/borderlessButtonStyle"        	    android:layout_width="wrap_content"        	    android:layout_height="wrap_content"        	    android:layout_alignParentTop="true"        	    android:layout_toRightOf="@+id/share"        	    android:layout_toEndOf="@+id/share"        	    android:text="@string/open_button"        	    android:textColor="@color/myAccentColor" />        	        	<Button        	    style="?android:attr/borderlessButtonStyle"        	    android:id="@+id/comments"        	    android:layout_width="wrap_content"        	    android:layout_height="wrap_content"        	    android:layout_alignParentRight="true"        	    android:layout_alignParentEnd="true"        	    android:text="@string/comments"        	    android:textColor="@color/myAccentColor" />        	        </RelativeLayout>            </LinearLayout>        </FrameLayout>