<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="1dip" >

    <ImageView
        android:id="@+id/image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_descr" />
    
    <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="center">
                
     <LinearLayout
                android:layout_weight="1" 
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

    <Button
        android:id="@+id/btnShare"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:background="@drawable/tumblr_button_background"
        android:textColor="#ffffff"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/share" />
    </LinearLayout>
    
     <LinearLayout
                android:layout_weight="1" 
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
    
    <Button
        android:id="@+id/btnSet"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:background="@drawable/tumblr_button_background"
        android:textColor="#ffffff"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/set" />
    
    </LinearLayout>
    

    
     <LinearLayout
                android:layout_weight="1" 
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
    
    <Button
        android:id="@+id/btnSave"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:background="@drawable/tumblr_button_background"
        android:textColor="#ffffff"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/save" />
    
    </LinearLayout>
    
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>