<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:elevation="8dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_height_youtube"
        android:background="@color/light_gray"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:background="@color/white"
        android:orientation="vertical">



        <!-- description -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/myPrimaryDarkColor"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/activity_detail_horizontal_margin"
            android:paddingRight="80dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/youtubetitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_textview"
                android:textColor="@color/white"
                android:textDirection="locale"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/youtubesubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_textview"
                android:textColor="@color/white"
                android:textDirection="locale"
                android:visibility="gone"/>


        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="5dp"/>

        <com.google.android.gms.ads.NativeExpressAdView
            android:id="@+id/adView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="360x100"
            ads:adUnitId="@string/ad_unit_id">
        </com.google.android.gms.ads.NativeExpressAdView>

        <TextView
            android:id="@+id/youtubedescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:fontFamily="sans-serif-light"
            android:linksClickable="true"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/activity_detail_horizontal_margin"
            android:paddingRight="@dimen/activity_detail_horizontal_margin"
            android:paddingTop="20dp"
            android:visibility="gone"
            android:text="@string/empty_textview"
            android:textDirection="locale"
            android:textSize="16sp" />

        <!-- buttons -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <Button
                android:id="@+id/favorite"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_button"
                android:textColor="@color/myAccentColor" />

            <Button
                android:id="@+id/comments"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:textColor="@color/myAccentColor" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/playbutton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_alignBottom="@id/image"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="-32dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/fab_ripple_blue"
        android:contentDescription="@string/play_button"
        android:elevation="24dp"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_action_play" />
</RelativeLayout>

